test/test_examples/syntactic_examples/syntax_error/error_prologue_01.zig
// Syntax error: first terminal isn't "const"

var ifj = @import("ifj24.zig"); 

pub fn main() void {

}  